--- a/packages/address-consts/package.json
+++ b/packages/address-consts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address-consts",
-  "version": "2.2.4",
+  "version": "2.2.4-graphql-config-beta.1",
   "license": "MIT",
   "description": "Constants and types relating to `@shopify/address`",
   "main": "index.js",
