--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address",
-  "version": "2.10.6",
+  "version": "2.10.6-graphql-config-beta.1",
   "license": "MIT",
   "description": "Address utilities for formatting addresses",
   "main": "index.js",
@@ -20,12 +20,12 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/address/README.md",
   "devDependencies": {
-    "@shopify/address-mocks": "^1.5.6",
-    "@shopify/jest-dom-mocks": "^2.11.5"
+    "@shopify/address-mocks": "^1.5.6-graphql-config-beta.1",
+    "@shopify/jest-dom-mocks": "^2.11.5-graphql-config-beta.1"
   },
   "sideEffects": false,
   "dependencies": {
-    "@shopify/address-consts": "^2.2.4"
+    "@shopify/address-consts": "^2.2.4-graphql-config-beta.1"
   },
   "files": [
     "build/*",
