--- a/packages/async/package.json
+++ b/packages/async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/async",
-  "version": "2.2.4",
+  "version": "2.2.4-graphql-config-beta.1",
   "license": "MIT",
   "description": "Primitives for loading parts of an application asynchronously",
   "main": "index.js",
