--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/dates",
-  "version": "0.5.6",
+  "version": "0.5.6-graphql-config-beta.1",
   "license": "MIT",
   "description": "Lightweight date operations library",
   "main": "index.js",
@@ -24,7 +24,7 @@
     "@shopify/decorators": "^1.2.5"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^2.11.5"
+    "@shopify/jest-dom-mocks": "^2.11.5-graphql-config-beta.1"
   },
   "files": [
     "build/*",
