--- a/packages/graphql-config-utilities/package.json
+++ b/packages/graphql-config-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-config-utilities",
-  "version": "1.3.2",
+  "version": "1.3.2-graphql-config-beta.1",
   "license": "MIT",
   "description": "Common utilities for graphql-config",
   "main": "index.js",
