--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-performance",
-  "version": "1.4.1",
+  "version": "1.4.1-graphql-config-beta.1",
   "license": "MIT",
   "description": "Creating middleware that sends performance-related data through StatsD",
   "main": "index.js",
@@ -22,8 +22,8 @@
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/koa-performance/README.md",
   "dependencies": {
     "@shopify/network": "^1.6.4",
-    "@shopify/performance": "^1.3.4",
-    "@shopify/statsd": "^2.1.4",
+    "@shopify/performance": "^1.3.4-graphql-config-beta.1",
+    "@shopify/statsd": "^2.1.4-graphql-config-beta.1",
     "@types/koa": "^2.0.0",
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
