--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "6.3.8",
+  "version": "6.3.8-graphql-config-beta.1",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -23,19 +23,19 @@
   "dependencies": {
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
-    "@shopify/async": "^2.2.4",
-    "@shopify/react-async": "^3.2.6",
-    "@shopify/react-effect": "^3.3.4",
+    "@shopify/async": "^2.2.4-graphql-config-beta.1",
+    "@shopify/react-async": "^3.2.6-graphql-config-beta.1",
+    "@shopify/react-effect": "^3.3.4-graphql-config-beta.1",
     "@shopify/react-hooks": "^1.13.1",
-    "@shopify/react-idle": "^1.1.5",
-    "@shopify/useful-types": "^2.4.0",
+    "@shopify/react-idle": "^1.1.5-graphql-config-beta.1",
+    "@shopify/useful-types": "^2.4.0-graphql-config-beta.1",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
     "graphql-typed": "^0.7.2"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^2.3.3"
+    "@shopify/react-testing": "^2.3.3-graphql-config-beta.1"
   },
   "files": [
     "build/*",
