--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "10.2.9",
+  "version": "10.2.9-graphql-config-beta.1",
   "license": "MIT",
   "description": "A component to render your React app with no static HTML",
   "main": "index.js",
@@ -20,9 +20,9 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-html/README.md",
   "dependencies": {
-    "@shopify/react-effect": "^3.3.4",
-    "@shopify/react-hydrate": "^1.2.5",
-    "@shopify/useful-types": "^2.4.0",
+    "@shopify/react-effect": "^3.3.4-graphql-config-beta.1",
+    "@shopify/react-hydrate": "^1.2.5-graphql-config-beta.1",
+    "@shopify/useful-types": "^2.4.0-graphql-config-beta.1",
     "@types/multistream": "^2.1.1",
     "multistream": "^2.1.1",
     "serialize-javascript": "^3.0.0"
@@ -32,7 +32,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^2.3.3",
+    "@shopify/react-testing": "^2.3.3-graphql-config-beta.1",
     "@shopify/with-env": "^1.2.4"
   },
   "sideEffects": false,
