--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "1.2.10",
+  "version": "1.2.10-graphql-config-beta.1",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-import-remote/README.md",
   "dependencies": {
-    "@shopify/async": "^2.2.4",
+    "@shopify/async": "^2.2.4-graphql-config-beta.1",
     "@shopify/react-hooks": "^1.13.1",
-    "@shopify/react-html": "^10.2.9",
+    "@shopify/react-html": "^10.2.9-graphql-config-beta.1",
     "@shopify/react-intersection-observer": "^2.1.4",
-    "@shopify/useful-types": "^2.4.0"
+    "@shopify/useful-types": "^2.4.0-graphql-config-beta.1"
   },
   "peerDependencies": {
     "react": "^16.4.1"
