--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "0.21.11",
+  "version": "0.21.11-graphql-config-beta.1",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -22,14 +22,14 @@
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-server/README.md",
   "dependencies": {
     "@shopify/network": "^1.6.4",
-    "@shopify/react-async": "^3.2.6",
-    "@shopify/react-cookie": "^0.1.10",
-    "@shopify/react-effect": "^3.3.4",
-    "@shopify/react-html": "^10.2.9",
-    "@shopify/react-hydrate": "^1.2.5",
-    "@shopify/react-network": "^3.6.10",
+    "@shopify/react-async": "^3.2.6-graphql-config-beta.1",
+    "@shopify/react-cookie": "^0.1.10-graphql-config-beta.1",
+    "@shopify/react-effect": "^3.3.4-graphql-config-beta.1",
+    "@shopify/react-html": "^10.2.9-graphql-config-beta.1",
+    "@shopify/react-hydrate": "^1.2.5-graphql-config-beta.1",
+    "@shopify/react-network": "^3.6.10-graphql-config-beta.1",
     "@shopify/sewing-kit-koa": "^6.4.5",
-    "@shopify/useful-types": "^2.4.0",
+    "@shopify/useful-types": "^2.4.0-graphql-config-beta.1",
     "chalk": "^2.4.2",
     "koa": "^2.5.0",
     "koa-compose": ">=3.0.0 <4.0.0",
@@ -37,7 +37,7 @@
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^2.3.4",
-    "@shopify/react-testing": "^2.3.3",
+    "@shopify/react-testing": "^2.3.3-graphql-config-beta.1",
     "@shopify/with-env": "^1.2.4",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
