--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-universal-provider",
-  "version": "1.2.10",
+  "version": "1.2.10-graphql-config-beta.1",
   "license": "MIT",
   "description": "Factory function and utilities to create self-serializing/deserializing providers that work for isomorphic applications",
   "main": "index.js",
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/Shopify/quilt/blob/main/packages/react-universal-provider/README.md",
   "dependencies": {
-    "@shopify/react-effect": "^3.3.4",
-    "@shopify/react-html": "^10.2.9"
+    "@shopify/react-effect": "^3.3.4-graphql-config-beta.1",
+    "@shopify/react-html": "^10.2.9-graphql-config-beta.1"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
