--- a/packages/statsd/package.json
+++ b/packages/statsd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/statsd",
-  "version": "2.1.4",
+  "version": "2.1.4-graphql-config-beta.1",
   "license": "MIT",
   "description": "An opinionated StatsD client for Shopify Node.js servers and other StatsD utilities",
   "main": "index.js",
