--- a/packages/graphql-config-utilities/package.json
+++ b/packages/graphql-config-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-config-utilities",
-  "version": "3.0.0",
+  "version": "3.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "Common utilities for graphql-config",
   "main": "index.js",
