--- a/packages/koa-liveness-ping/package.json
+++ b/packages/koa-liveness-ping/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-liveness-ping",
-  "version": "1.0.0",
+  "version": "1.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "A package for creating liveness ping middleware for use with Koa",
   "main": "index.js",
@@ -23,7 +23,7 @@
     "node": ">=12.14.0"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^3.0.0",
+    "@shopify/jest-koa-mocks": "^3.0.1-address-mocks-minified-beta.0",
     "@types/koa": "^2.0.0",
     "@types/koa-mount": "^4.0.0",
     "koa": "^2.5.0",
