--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-performance",
-  "version": "2.0.0",
+  "version": "2.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "Creating middleware that sends performance-related data through StatsD",
   "main": "index.js",
@@ -25,8 +25,8 @@
   },
   "dependencies": {
     "@shopify/network": "^2.0.0",
-    "@shopify/performance": "^2.0.0",
-    "@shopify/statsd": "^3.0.0",
+    "@shopify/performance": "^2.0.1-address-mocks-minified-beta.0",
+    "@shopify/statsd": "^3.0.1-address-mocks-minified-beta.0",
     "@types/koa": "^2.0.0",
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
