--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/polyfills",
-  "version": "3.0.1",
+  "version": "3.0.2-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "Blessed polyfills for web platform features",
   "sideEffects": true,
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/useful-types": "^3.0.0",
+    "@shopify/useful-types": "^3.0.1-address-mocks-minified-beta.0",
     "caniuse-api": "^3.0.0",
     "core-js": "^3.13.0",
     "formdata-polyfill": "^3.0.20",
