--- a/packages/react-csrf-universal-provider/package.json
+++ b/packages/react-csrf-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-csrf-universal-provider",
-  "version": "2.0.0",
+  "version": "2.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing CSRF token provider that works for isomorphic applications",
   "main": "index.js",
@@ -25,14 +25,14 @@
   },
   "dependencies": {
     "@shopify/react-csrf": "^2.0.0",
-    "@shopify/react-html": "^11.0.0",
-    "@shopify/react-universal-provider": "^2.0.0"
+    "@shopify/react-html": "^11.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-universal-provider": "^2.0.1-address-mocks-minified-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^4.0.0",
+    "@shopify/react-effect": "^4.0.1-address-mocks-minified-beta.0",
     "faker": "^4.1.0"
   },
   "files": [
