--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "7.0.0",
+  "version": "7.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -26,19 +26,19 @@
   "dependencies": {
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
-    "@shopify/async": "^3.0.0",
-    "@shopify/react-async": "^4.0.0",
-    "@shopify/react-effect": "^4.0.0",
-    "@shopify/react-hooks": "^2.0.0",
-    "@shopify/react-idle": "^2.0.0",
-    "@shopify/useful-types": "^3.0.0",
+    "@shopify/async": "^3.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-async": "^4.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-effect": "^4.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-hooks": "^2.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-idle": "^2.0.1-address-mocks-minified-beta.0",
+    "@shopify/useful-types": "^3.0.1-address-mocks-minified-beta.0",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
     "graphql-typed": "^1.0.0"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.0.0"
+    "@shopify/react-testing": "^3.0.1-address-mocks-minified-beta.0"
   },
   "files": [
     "build/*",
