--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-hooks",
-  "version": "2.0.0",
+  "version": "2.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "A collection of primitive React hooks",
   "main": "index.js",
