--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "11.0.0",
+  "version": "11.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "A component to render your React app with no static HTML",
   "main": "index.js",
@@ -23,9 +23,9 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-effect": "^4.0.0",
-    "@shopify/react-hydrate": "^2.0.0",
-    "@shopify/useful-types": "^3.0.0",
+    "@shopify/react-effect": "^4.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-hydrate": "^2.0.1-address-mocks-minified-beta.0",
+    "@shopify/useful-types": "^3.0.1-address-mocks-minified-beta.0",
     "@types/multistream": "^2.1.1",
     "multistream": "^2.1.1",
     "serialize-javascript": "^3.0.0"
@@ -35,7 +35,7 @@
     "react-dom": "^16.3.2"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.0.0",
+    "@shopify/react-testing": "^3.0.1-address-mocks-minified-beta.0",
     "@shopify/with-env": "^2.0.0"
   },
   "sideEffects": false,
