--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "2.0.0",
+  "version": "2.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -23,11 +23,11 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.0.0",
-    "@shopify/react-hooks": "^2.0.0",
-    "@shopify/react-html": "^11.0.0",
-    "@shopify/react-intersection-observer": "^3.0.0",
-    "@shopify/useful-types": "^3.0.0"
+    "@shopify/async": "^3.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-hooks": "^2.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-html": "^11.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-intersection-observer": "^3.0.1-address-mocks-minified-beta.0",
+    "@shopify/useful-types": "^3.0.1-address-mocks-minified-beta.0"
   },
   "peerDependencies": {
     "react": "^16.4.1"
