--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "4.0.0",
+  "version": "4.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application",
   "main": "index.js",
@@ -25,9 +25,9 @@
   },
   "dependencies": {
     "@shopify/network": "^2.0.0",
-    "@shopify/react-effect": "^4.0.0",
-    "@shopify/react-hooks": "^2.0.0",
-    "@shopify/react-universal-provider": "^2.0.0",
+    "@shopify/react-effect": "^4.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-hooks": "^2.0.1-address-mocks-minified-beta.0",
+    "@shopify/react-universal-provider": "^2.0.1-address-mocks-minified-beta.0",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
@@ -35,7 +35,7 @@
     "cookie": "^0.4.0"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^3.0.0"
+    "@shopify/jest-koa-mocks": "^3.0.1-address-mocks-minified-beta.0"
   },
   "peerDependencies": {
     "koa": "^2.5.0",
