--- a/packages/react-shortcuts/package.json
+++ b/packages/react-shortcuts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-shortcuts",
-  "version": "4.0.0",
+  "version": "4.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "Declaratively and efficiently match shortcut combinations in your React application",
   "main": "index.js",
