--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-web-worker",
-  "version": "2.0.0",
+  "version": "2.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "A hook for using web workers in React applications",
   "main": "index.js",
@@ -24,9 +24,9 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-hooks": "^2.0.0",
-    "@shopify/useful-types": "^3.0.0",
-    "@shopify/web-worker": "^2.0.0"
+    "@shopify/react-hooks": "^2.0.1-address-mocks-minified-beta.0",
+    "@shopify/useful-types": "^3.0.1-address-mocks-minified-beta.0",
+    "@shopify/web-worker": "^2.0.1-address-mocks-minified-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <17.0.0",
