--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/web-worker",
-  "version": "2.0.0",
+  "version": "2.0.1-address-mocks-minified-beta.0",
   "license": "MIT",
   "description": "Tools for making web workers fun to use",
   "main": "index.js",
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/rpc": "^2.0.0",
+    "@shopify/rpc": "^2.0.1-address-mocks-minified-beta.0",
     "loader-utils": "^1.0.0",
     "webpack-virtual-modules": "^0.2.2"
   },
