--- a/packages/mock-factory/package.json
+++ b/packages/mock-factory/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/mock-factory",
-  "version": "0.0.0",
+  "version": "0.0.0-mock-factory-beta.0",
   "license": "MIT",
   "description": "create typesafe mock data objects",
   "main": "index.js",
@@ -25,7 +25,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/useful-types": "^3.0.5",
+    "@shopify/useful-types": "^3.0.5-mock-factory-beta.0",
     "lodash": "^4.17.21"
   },
   "files": [
