--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "4.4.1",
+  "version": "4.4.1-mock-factory-beta.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,10 +24,10 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-graphql": "^7.1.16",
-    "@shopify/react-hooks": "^2.1.10",
-    "@shopify/react-html": "^11.1.12",
-    "@shopify/react-network": "^4.2.1",
+    "@shopify/react-graphql": "^7.1.16-mock-factory-beta.0",
+    "@shopify/react-hooks": "^2.1.10-mock-factory-beta.0",
+    "@shopify/react-html": "^11.1.12-mock-factory-beta.0",
+    "@shopify/react-network": "^4.2.1-mock-factory-beta.0",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
