--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "11.1.12",
+  "version": "11.1.12-mock-factory-beta.0",
   "license": "MIT",
   "description": "A component to render your React app with no static HTML",
   "main": "index.js",
@@ -31,8 +31,8 @@
   },
   "dependencies": {
     "@shopify/react-effect": "^4.1.7",
-    "@shopify/react-hydrate": "^2.1.11",
-    "@shopify/useful-types": "^3.0.5",
+    "@shopify/react-hydrate": "^2.1.11-mock-factory-beta.0",
+    "@shopify/useful-types": "^3.0.5-mock-factory-beta.0",
     "@types/multistream": "^2.1.1",
     "multistream": "^2.1.1",
     "serialize-javascript": "^3.0.0"
@@ -42,7 +42,7 @@
     "react-dom": ">=16.8.0 <18.0.0"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.3.1",
+    "@shopify/react-testing": "^3.3.1-mock-factory-beta.0",
     "@shopify/with-env": "^2.0.4"
   },
   "sideEffects": false,
