--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-idle",
-  "version": "2.1.7",
+  "version": "2.1.7-mock-factory-beta.0",
   "license": "MIT",
   "description": "Utilities for working with idle callbacks in React",
   "main": "index.js",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@shopify/async": "^3.1.0",
-    "@shopify/useful-types": "^3.0.5"
+    "@shopify/useful-types": "^3.0.5-mock-factory-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
