--- a/packages/react-router/package.json
+++ b/packages/react-router/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-router",
-  "version": "1.2.1",
+  "version": "1.2.1-mock-factory-beta.0",
   "license": "MIT",
   "description": "A universal router for React",
   "main": "index.js",
@@ -24,7 +24,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-network": "^4.2.1",
+    "@shopify/react-network": "^4.2.1-mock-factory-beta.0",
     "@types/react-router-dom": "*",
     "react-router-dom": ">=5.1.0 <6.0.0"
   },
