--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-web-worker",
-  "version": "4.0.2",
+  "version": "4.0.2-mock-factory-beta.0",
   "license": "MIT",
   "description": "A hook for using web workers in React applications",
   "main": "index.js",
@@ -24,8 +24,8 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-hooks": "^2.1.10",
-    "@shopify/useful-types": "^3.0.5",
+    "@shopify/react-hooks": "^2.1.10-mock-factory-beta.0",
+    "@shopify/useful-types": "^3.0.5-mock-factory-beta.0",
     "@shopify/web-worker": "^4.0.0"
   },
   "peerDependencies": {
