--- a/packages/address-mocks/package.json
+++ b/packages/address-mocks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address-mocks",
-  "version": "2.0.15",
+  "version": "2.0.15-export-beta.0",
   "license": "MIT",
   "description": "Address mocks for `@shopify/address`",
   "main": "index.js",
@@ -27,8 +27,8 @@
   },
   "sideEffects": false,
   "dependencies": {
-    "@shopify/address-consts": "^3.0.8",
-    "@shopify/jest-dom-mocks": "^3.0.13"
+    "@shopify/address-consts": "^3.0.8-export-beta.0",
+    "@shopify/jest-dom-mocks": "^3.0.13-export-beta.0"
   },
   "files": [
     "build/",
