--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address",
-  "version": "3.0.15",
+  "version": "3.0.15-export-beta.0",
   "license": "MIT",
   "description": "Address utilities for formatting addresses",
   "main": "index.js",
@@ -23,12 +23,12 @@
     "node": ">=12.14.0"
   },
   "devDependencies": {
-    "@shopify/address-mocks": "^2.0.15",
-    "@shopify/jest-dom-mocks": "^3.0.13"
+    "@shopify/address-mocks": "^2.0.15-export-beta.0",
+    "@shopify/jest-dom-mocks": "^3.0.13-export-beta.0"
   },
   "sideEffects": false,
   "dependencies": {
-    "@shopify/address-consts": "^3.0.8"
+    "@shopify/address-consts": "^3.0.8-export-beta.0"
   },
   "files": [
     "build/",
