--- a/packages/css-utilities/package.json
+++ b/packages/css-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/css-utilities",
-  "version": "2.0.7",
+  "version": "2.0.7-export-beta.0",
   "license": "MIT",
   "description": "A set of CSS styling-related utilities",
   "main": "index.js",
