--- a/packages/function-enhancers/package.json
+++ b/packages/function-enhancers/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/function-enhancers",
-  "version": "2.0.6",
+  "version": "2.0.6-export-beta.0",
   "license": "MIT",
   "description": "A set of helpers to enhance functions",
   "main": "index.js",
