--- a/packages/graphql-config-utilities/package.json
+++ b/packages/graphql-config-utilities/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-config-utilities",
-  "version": "3.0.8",
+  "version": "3.0.8-export-beta.0",
   "license": "MIT",
   "description": "Common utilities for graphql-config",
   "main": "index.js",
