--- a/packages/graphql-validate-fixtures/package.json
+++ b/packages/graphql-validate-fixtures/package.json
@@ -1,6 +1,6 @@
 {
   "name": "graphql-validate-fixtures",
-  "version": "2.1.5",
+  "version": "2.1.5-export-beta.0",
   "license": "MIT",
   "description": "Validates JSON fixtures for GraphQL responses against the associated operations and schema",
   "main": "index.js",
@@ -30,8 +30,8 @@
     "glob": "^7.1.2",
     "graphql": ">=14.5.0 <16.0.0",
     "graphql-config": "^3.2.0",
-    "graphql-config-utilities": "^3.0.8",
-    "graphql-tool-utilities": "^2.1.4",
+    "graphql-config-utilities": "^3.0.8-export-beta.0",
+    "graphql-tool-utilities": "^2.1.4-export-beta.0",
     "yargs": "^15.3.1"
   },
   "files": [
