--- a/packages/koa-performance/package.json
+++ b/packages/koa-performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/koa-performance",
-  "version": "2.1.2",
+  "version": "2.1.2-export-beta.0",
   "license": "MIT",
   "description": "Creating middleware that sends performance-related data through StatsD",
   "main": "index.js",
@@ -24,9 +24,9 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/network": "^2.0.6",
-    "@shopify/performance": "^2.0.12",
-    "@shopify/statsd": "^3.0.10",
+    "@shopify/network": "^2.0.6-export-beta.0",
+    "@shopify/performance": "^2.0.12-export-beta.0",
+    "@shopify/statsd": "^3.0.10-export-beta.0",
     "@types/koa": "^2.0.0",
     "@types/koa-bodyparser": "*",
     "@types/koa-compose": "*",
@@ -37,7 +37,7 @@
     "koa": ">=2.0.0"
   },
   "devDependencies": {
-    "@shopify/with-env": "^2.0.6"
+    "@shopify/with-env": "^2.0.6-export-beta.0"
   },
   "files": [
     "build/",
