--- a/packages/mime-types/package.json
+++ b/packages/mime-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/mime-types",
-  "version": "1.2.2",
+  "version": "1.2.2-export-beta.0",
   "license": "MIT",
   "description": "MIME type consistency",
   "main": "index.js",
