--- a/packages/network/package.json
+++ b/packages/network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/network",
-  "version": "2.0.6",
+  "version": "2.0.6-export-beta.0",
   "license": "MIT",
   "description": "Common values related to dealing with the network",
   "main": "index.js",
