--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "7.1.20",
+  "version": "7.1.20-export-beta.0",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -26,19 +26,19 @@
   "dependencies": {
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
-    "@shopify/async": "^3.1.2",
-    "@shopify/react-async": "^4.1.18",
-    "@shopify/react-effect": "^4.1.9",
-    "@shopify/react-hooks": "^2.1.14",
-    "@shopify/react-idle": "^2.1.10",
-    "@shopify/useful-types": "^3.1.0",
+    "@shopify/async": "^3.1.2-export-beta.0",
+    "@shopify/react-async": "^4.1.18-export-beta.0",
+    "@shopify/react-effect": "^4.1.9-export-beta.0",
+    "@shopify/react-hooks": "^2.1.14-export-beta.0",
+    "@shopify/react-idle": "^2.1.10-export-beta.0",
+    "@shopify/useful-types": "^3.1.0-export-beta.0",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
-    "graphql-typed": "^1.1.3"
+    "graphql-typed": "^1.1.3-export-beta.0"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.3.5"
+    "@shopify/react-testing": "^3.3.5-export-beta.0"
   },
   "files": [
     "build/",
