--- a/packages/react-hooks/package.json
+++ b/packages/react-hooks/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-hooks",
-  "version": "2.1.14",
+  "version": "2.1.14-export-beta.0",
   "license": "MIT",
   "description": "A collection of primitive React hooks",
   "main": "index.js",
@@ -45,6 +45,6 @@
     "./*": "./"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.3.5"
+    "@shopify/react-testing": "^3.3.5-export-beta.0"
   }
 }
