--- a/packages/react-html/package.json
+++ b/packages/react-html/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-html",
-  "version": "11.1.16",
+  "version": "11.1.16-export-beta.0",
   "license": "MIT",
   "description": "A component to render your React app with no static HTML",
   "main": "index.js",
@@ -30,8 +30,8 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-effect": "^4.1.9",
-    "@shopify/react-hydrate": "^2.1.15",
+    "@shopify/react-effect": "^4.1.9-export-beta.0",
+    "@shopify/react-hydrate": "^2.1.15-export-beta.0",
     "@types/multistream": "^2.1.1",
     "multistream": "^2.1.1",
     "serialize-javascript": "^3.0.0"
@@ -41,8 +41,8 @@
     "react-dom": ">=16.8.0 <18.0.0"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.3.5",
-    "@shopify/with-env": "^2.0.6"
+    "@shopify/react-testing": "^3.3.5-export-beta.0",
+    "@shopify/with-env": "^2.0.6-export-beta.0"
   },
   "sideEffects": false,
   "files": [
