--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-idle",
-  "version": "2.1.10",
+  "version": "2.1.10-export-beta.0",
   "license": "MIT",
   "description": "Utilities for working with idle callbacks in React",
   "main": "index.js",
@@ -24,8 +24,8 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.1.2",
-    "@shopify/useful-types": "^3.1.0"
+    "@shopify/async": "^3.1.2-export-beta.0",
+    "@shopify/useful-types": "^3.1.0-export-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
