--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "2.1.18",
+  "version": "2.1.18-export-beta.0",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -23,11 +23,11 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.1.2",
-    "@shopify/react-hooks": "^2.1.14",
-    "@shopify/react-html": "^11.1.16",
-    "@shopify/react-intersection-observer": "^3.1.9",
-    "@shopify/useful-types": "^3.1.0"
+    "@shopify/async": "^3.1.2-export-beta.0",
+    "@shopify/react-hooks": "^2.1.14-export-beta.0",
+    "@shopify/react-html": "^11.1.16-export-beta.0",
+    "@shopify/react-intersection-observer": "^3.1.9-export-beta.0",
+    "@shopify/useful-types": "^3.1.0-export-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
