--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "2.1.6",
+  "version": "2.1.6-export-beta.0",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -31,23 +31,23 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/network": "^2.0.6",
-    "@shopify/react-async": "^4.1.18",
-    "@shopify/react-cookie": "^1.2.6",
-    "@shopify/react-effect": "^4.1.9",
-    "@shopify/react-html": "^11.1.16",
-    "@shopify/react-hydrate": "^2.1.15",
-    "@shopify/react-network": "^4.2.6",
-    "@shopify/sewing-kit-koa": "^8.1.3",
+    "@shopify/network": "^2.0.6-export-beta.0",
+    "@shopify/react-async": "^4.1.18-export-beta.0",
+    "@shopify/react-cookie": "^1.2.6-export-beta.0",
+    "@shopify/react-effect": "^4.1.9-export-beta.0",
+    "@shopify/react-html": "^11.1.16-export-beta.0",
+    "@shopify/react-hydrate": "^2.1.15-export-beta.0",
+    "@shopify/react-network": "^4.2.6-export-beta.0",
+    "@shopify/sewing-kit-koa": "^8.1.3-export-beta.0",
     "chalk": "^2.4.2",
     "koa": "^2.13.4",
     "koa-compose": ">=4.0.0 <5.0.0",
     "koa-mount": "^4.0.0"
   },
   "devDependencies": {
-    "@shopify/jest-koa-mocks": "^3.1.3",
-    "@shopify/react-testing": "^3.3.5",
-    "@shopify/with-env": "^2.0.6",
+    "@shopify/jest-koa-mocks": "^3.1.3-export-beta.0",
+    "@shopify/react-testing": "^3.3.5-export-beta.0",
+    "@shopify/with-env": "^2.0.6-export-beta.0",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
     "get-port": "^5.0.0",
