--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-universal-provider",
-  "version": "2.1.16",
+  "version": "2.1.16-export-beta.0",
   "license": "MIT",
   "description": "Factory function and utilities to create self-serializing/deserializing providers that work for isomorphic applications",
   "main": "index.js",
@@ -24,8 +24,8 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-effect": "^4.1.9",
-    "@shopify/react-html": "^11.1.16"
+    "@shopify/react-effect": "^4.1.9-export-beta.0",
+    "@shopify/react-html": "^11.1.16-export-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
