--- a/packages/react-web-worker/package.json
+++ b/packages/react-web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-web-worker",
-  "version": "4.0.6",
+  "version": "4.0.6-export-beta.0",
   "license": "MIT",
   "description": "A hook for using web workers in React applications",
   "main": "index.js",
@@ -24,9 +24,9 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-hooks": "^2.1.14",
-    "@shopify/useful-types": "^3.1.0",
-    "@shopify/web-worker": "^4.0.2"
+    "@shopify/react-hooks": "^2.1.14-export-beta.0",
+    "@shopify/useful-types": "^3.1.0-export-beta.0",
+    "@shopify/web-worker": "^4.0.2-export-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0",
