--- a/packages/semaphore/package.json
+++ b/packages/semaphore/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/semaphore",
-  "version": "2.0.9",
+  "version": "2.0.9-export-beta.0",
   "license": "MIT",
   "description": "Counting semaphore",
   "main": "index.js",
