--- a/packages/web-worker/package.json
+++ b/packages/web-worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/web-worker",
-  "version": "4.0.2",
+  "version": "4.0.2-export-beta.0",
   "license": "MIT",
   "description": "Tools for making web workers fun to use",
   "main": "index.js",
