--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-async",
-  "version": "4.1.18",
+  "version": "4.1.19-a11y-test-class-beta.0",
   "license": "MIT",
   "description": "Tools for creating powerful, asynchronously-loaded React components",
   "main": "index.js",
@@ -33,11 +33,11 @@
   "dependencies": {
     "@shopify/async": "^3.1.2",
     "@shopify/react-effect": "^4.1.9",
-    "@shopify/react-hooks": "^2.1.14",
-    "@shopify/react-hydrate": "^2.1.15",
-    "@shopify/react-idle": "^2.1.10",
+    "@shopify/react-hooks": "^2.1.15-a11y-test-class-beta.0",
+    "@shopify/react-hydrate": "^2.1.16-a11y-test-class-beta.0",
+    "@shopify/react-idle": "^2.1.11-a11y-test-class-beta.0",
     "@shopify/react-intersection-observer": "^3.1.9",
-    "@shopify/useful-types": "^3.1.0"
+    "@shopify/useful-types": "^3.1.1-a11y-test-class-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
