--- a/packages/react-hydrate/package.json
+++ b/packages/react-hydrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-hydrate",
-  "version": "2.1.15",
+  "version": "2.1.16-a11y-test-class-beta.0",
   "license": "MIT",
   "description": "Utilities for hydrating server-rendered React apps",
   "main": "index.js",
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@shopify/react-effect": "^4.1.9",
-    "@shopify/react-hooks": "^2.1.14"
+    "@shopify/react-hooks": "^2.1.15-a11y-test-class-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
