--- a/packages/address/package.json
+++ b/packages/address/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/address",
-  "version": "3.0.16",
+  "version": "3.0.17-mf-beta.0",
   "license": "MIT",
   "description": "Address utilities for formatting addresses",
   "main": "index.js",
@@ -23,8 +23,8 @@
     "node": ">=12.14.0"
   },
   "devDependencies": {
-    "@shopify/address-mocks": "^2.0.16",
-    "@shopify/jest-dom-mocks": "^3.0.14"
+    "@shopify/address-mocks": "^2.0.17-mf-beta.0",
+    "@shopify/jest-dom-mocks": "^3.0.15-mf-beta.0"
   },
   "sideEffects": false,
   "dependencies": {
