--- a/packages/dates/package.json
+++ b/packages/dates/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/dates",
-  "version": "1.1.3",
+  "version": "1.1.4-mf-beta.0",
   "license": "MIT",
   "description": "Lightweight date operations library",
   "main": "index.js",
@@ -27,7 +27,7 @@
     "@shopify/decorators": "^2.0.7"
   },
   "devDependencies": {
-    "@shopify/jest-dom-mocks": "^3.0.14"
+    "@shopify/jest-dom-mocks": "^3.0.15-mf-beta.0"
   },
   "files": [
     "build/",
