--- a/packages/react-async/package.json
+++ b/packages/react-async/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-async",
-  "version": "4.1.20",
+  "version": "4.1.21-mf-beta.0",
   "license": "MIT",
   "description": "Tools for creating powerful, asynchronously-loaded React components",
   "main": "index.js",
@@ -31,13 +31,13 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.1.3",
+    "@shopify/async": "^3.1.4-mf-beta.0",
     "@shopify/react-effect": "^4.1.10",
-    "@shopify/react-hooks": "^2.1.16",
-    "@shopify/react-hydrate": "^2.1.17",
-    "@shopify/react-idle": "^2.1.11",
+    "@shopify/react-hooks": "^2.1.17-mf-beta.0",
+    "@shopify/react-hydrate": "^2.1.18-mf-beta.0",
+    "@shopify/react-idle": "^2.1.12-mf-beta.0",
     "@shopify/react-intersection-observer": "^3.1.10",
-    "@shopify/useful-types": "^4.0.0"
+    "@shopify/useful-types": "^4.0.1-mf-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
