--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "7.1.22",
+  "version": "7.1.23-mf-beta.0",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -26,19 +26,19 @@
   "dependencies": {
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
-    "@shopify/async": "^3.1.3",
-    "@shopify/react-async": "^4.1.20",
+    "@shopify/async": "^3.1.4-mf-beta.0",
+    "@shopify/react-async": "^4.1.21-mf-beta.0",
     "@shopify/react-effect": "^4.1.10",
-    "@shopify/react-hooks": "^2.1.16",
-    "@shopify/react-idle": "^2.1.11",
-    "@shopify/useful-types": "^4.0.0",
+    "@shopify/react-hooks": "^2.1.17-mf-beta.0",
+    "@shopify/react-idle": "^2.1.12-mf-beta.0",
+    "@shopify/useful-types": "^4.0.1-mf-beta.0",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
     "graphql-typed": "^1.1.4"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.3.7"
+    "@shopify/react-testing": "^3.3.8-mf-beta.0"
   },
   "files": [
     "build/",
