--- a/packages/react-import-remote/package.json
+++ b/packages/react-import-remote/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-import-remote",
-  "version": "2.1.20",
+  "version": "2.1.21-mf-beta.0",
   "license": "MIT",
   "description": "Asynchronous script loading for React",
   "main": "index.js",
@@ -23,11 +23,11 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/async": "^3.1.3",
-    "@shopify/react-hooks": "^2.1.16",
-    "@shopify/react-html": "^11.1.18",
+    "@shopify/async": "^3.1.4-mf-beta.0",
+    "@shopify/react-hooks": "^2.1.17-mf-beta.0",
+    "@shopify/react-html": "^11.1.19-mf-beta.0",
     "@shopify/react-intersection-observer": "^3.1.10",
-    "@shopify/useful-types": "^4.0.0"
+    "@shopify/useful-types": "^4.0.1-mf-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <18.0.0"
