--- a/packages/useful-types/package.json
+++ b/packages/useful-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/useful-types",
-  "version": "4.0.0",
+  "version": "4.0.1-mf-beta.0",
   "license": "MIT",
   "description": "A few handy TypeScript types",
   "main": "index.js",
