--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-compose",
-  "version": "2.1.12",
+  "version": "2.1.13-ut-beta.0",
   "license": "MIT",
   "description": "Cleanly compose multiple component enhancers together with minimal fuss",
   "main": "index.js",
@@ -23,7 +23,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/useful-types": "^4.0.2",
+    "@shopify/useful-types": "^4.0.3-ut-beta.0",
     "hoist-non-react-statics": "^3.0.1"
   },
   "peerDependencies": {
