--- a/packages/react-graphql-universal-provider/package.json
+++ b/packages/react-graphql-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql-universal-provider",
-  "version": "4.4.12",
+  "version": "4.4.13-ut-beta.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing GraphQL provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,10 +24,10 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-graphql": "^7.1.25",
-    "@shopify/react-hooks": "^2.1.18",
-    "@shopify/react-html": "^11.1.22",
-    "@shopify/react-network": "^4.2.12",
+    "@shopify/react-graphql": "^7.1.26-ut-beta.0",
+    "@shopify/react-hooks": "^2.1.19-ut-beta.0",
+    "@shopify/react-html": "^11.1.23-ut-beta.0",
+    "@shopify/react-network": "^4.2.13-ut-beta.0",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
