--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "7.1.25",
+  "version": "7.1.26-ut-beta.0",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -27,18 +27,18 @@
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
     "@shopify/async": "^3.1.5",
-    "@shopify/react-async": "^4.1.23",
+    "@shopify/react-async": "^4.1.24-ut-beta.0",
     "@shopify/react-effect": "^4.1.12",
-    "@shopify/react-hooks": "^2.1.18",
-    "@shopify/react-idle": "^2.1.13",
-    "@shopify/useful-types": "^4.0.2",
+    "@shopify/react-hooks": "^2.1.19-ut-beta.0",
+    "@shopify/react-idle": "^2.1.14-ut-beta.0",
+    "@shopify/useful-types": "^4.0.3-ut-beta.0",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
     "apollo-link": ">=1.0.0 <2.0.0",
     "graphql-typed": "^1.1.5"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.3.9"
+    "@shopify/react-testing": "^3.3.10-ut-beta.0"
   },
   "files": [
     "build/",
