--- a/packages/react-server/package.json
+++ b/packages/react-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-server",
-  "version": "2.1.12",
+  "version": "2.1.13-ut-beta.0",
   "license": "MIT",
   "description": "Utilities for React server-side rendering",
   "main": "index.js",
@@ -32,12 +32,12 @@
   },
   "dependencies": {
     "@shopify/network": "^2.0.8",
-    "@shopify/react-async": "^4.1.23",
-    "@shopify/react-cookie": "^1.2.12",
+    "@shopify/react-async": "^4.1.24-ut-beta.0",
+    "@shopify/react-cookie": "^1.2.13-ut-beta.0",
     "@shopify/react-effect": "^4.1.12",
-    "@shopify/react-html": "^11.1.22",
-    "@shopify/react-hydrate": "^2.1.20",
-    "@shopify/react-network": "^4.2.12",
+    "@shopify/react-html": "^11.1.23-ut-beta.0",
+    "@shopify/react-hydrate": "^2.1.21-ut-beta.0",
+    "@shopify/react-network": "^4.2.13-ut-beta.0",
     "@shopify/sewing-kit-koa": "^8.1.5",
     "chalk": "^2.4.2",
     "koa": "^2.13.4",
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^3.1.5",
-    "@shopify/react-testing": "^3.3.9",
+    "@shopify/react-testing": "^3.3.10-ut-beta.0",
     "@shopify/with-env": "^2.0.8",
     "@types/koa": "^2.0.0",
     "@types/webpack-virtual-modules": "^0.1.0",
