--- a/packages/polyfills/package.json
+++ b/packages/polyfills/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/polyfills",
-  "version": "3.1.12",
+  "version": "3.1.13-beta-ut.0",
   "license": "MIT",
   "description": "Blessed polyfills for web platform features",
   "sideEffects": true,
@@ -88,7 +88,7 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/useful-types": "^4.0.2",
+    "@shopify/useful-types": "^4.0.3-beta-ut.0",
     "caniuse-api": "^3.0.0",
     "core-js": "^3.13.0",
     "formdata-polyfill": "^3.0.20",
