--- a/packages/react-i18n/package.json
+++ b/packages/react-i18n/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n",
-  "version": "6.3.13",
+  "version": "6.3.14-beta-ut.0",
   "license": "MIT",
   "description": "i18n utilities for React handling translations, formatting, and more",
   "main": "index.js",
@@ -51,8 +51,8 @@
     "@shopify/function-enhancers": "^2.0.8",
     "@shopify/i18n": "^1.0.9",
     "@shopify/react-effect": "^4.1.12",
-    "@shopify/react-hooks": "^2.1.18",
-    "@shopify/useful-types": "^4.0.2",
+    "@shopify/react-hooks": "^2.1.19-beta-ut.0",
+    "@shopify/useful-types": "^4.0.3-beta-ut.0",
     "@types/hoist-non-react-statics": "^3.0.1",
     "change-case": "^4.1.2",
     "glob": "^7.1.4",
