--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "4.2.12",
+  "version": "4.2.13-beta-ut.0",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application",
   "main": "index.js",
@@ -33,8 +33,8 @@
   "dependencies": {
     "@shopify/network": "^2.0.8",
     "@shopify/react-effect": "^4.1.12",
-    "@shopify/react-hooks": "^2.1.18",
-    "@shopify/react-universal-provider": "^2.1.22",
+    "@shopify/react-hooks": "^2.1.19-beta-ut.0",
+    "@shopify/react-universal-provider": "^2.1.23-beta-ut.0",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
