--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "4.2.13",
+  "version": "4.2.13-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application",
   "main": "index.js",
@@ -32,9 +32,9 @@
   },
   "dependencies": {
     "@shopify/network": "^2.0.8",
-    "@shopify/react-effect": "^4.1.12",
-    "@shopify/react-hooks": "^2.1.19",
-    "@shopify/react-universal-provider": "^2.1.23",
+    "@shopify/react-effect": "^4.1.12-react-18-react-testing-beta.0",
+    "@shopify/react-hooks": "^2.1.19-react-18-react-testing-beta.0",
+    "@shopify/react-universal-provider": "^2.1.23-react-18-react-testing-beta.0",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
