--- a/packages/react-csrf/package.json
+++ b/packages/react-csrf/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-csrf",
-  "version": "2.1.10",
+  "version": "2.1.10-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "Share CSRF tokens throughout a React application",
   "main": "index.js",
