--- a/packages/react-effect/package.json
+++ b/packages/react-effect/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-effect",
-  "version": "4.1.12",
+  "version": "4.1.12-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "A component and set of utilities for performing effects within a universal React app",
   "main": "index.js",
