--- a/packages/react-form-state/package.json
+++ b/packages/react-form-state/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-form-state",
-  "version": "1.1.15",
+  "version": "1.1.15-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "Manage React forms tersely and type-safely with no magic",
   "main": "index.js",
