--- a/packages/react-graphql/package.json
+++ b/packages/react-graphql/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-graphql",
-  "version": "7.2.0",
+  "version": "7.2.0-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "Tools for creating type-safe and asynchronous GraphQL components for React",
   "main": "index.js",
@@ -27,10 +27,10 @@
     "@apollo/react-common": ">=3.0.0 <4.0.0",
     "@apollo/react-hooks": ">=3.0.0 <4.0.0",
     "@shopify/async": "^3.1.5",
-    "@shopify/react-async": "^4.1.24",
-    "@shopify/react-effect": "^4.1.12",
-    "@shopify/react-hooks": "^2.1.19",
-    "@shopify/react-idle": "^2.1.14",
+    "@shopify/react-async": "^4.1.24-react-18-react-testing-beta.0",
+    "@shopify/react-effect": "^4.1.12-react-18-react-testing-beta.0",
+    "@shopify/react-hooks": "^2.1.19-react-18-react-testing-beta.0",
+    "@shopify/react-idle": "^2.1.14-react-18-react-testing-beta.0",
     "@shopify/useful-types": "^4.0.3",
     "apollo-cache-inmemory": ">=1.0.0 <2.0.0",
     "apollo-client": ">=2.0.0 <3.0.0",
@@ -38,7 +38,7 @@
     "graphql-typed": "^1.1.5"
   },
   "devDependencies": {
-    "@shopify/react-testing": "^3.3.10"
+    "@shopify/react-testing": "^3.3.10-react-18-react-testing-beta.0"
   },
   "files": [
     "build/",
