--- a/packages/react-hydrate/package.json
+++ b/packages/react-hydrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-hydrate",
-  "version": "2.1.21",
+  "version": "2.1.21-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "Utilities for hydrating server-rendered React apps",
   "main": "index.js",
@@ -24,8 +24,8 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-effect": "^4.1.12",
-    "@shopify/react-hooks": "^2.1.19"
+    "@shopify/react-effect": "^4.1.12-react-18-react-testing-beta.0",
+    "@shopify/react-hooks": "^2.1.19-react-18-react-testing-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
