--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n-universal-provider",
-  "version": "2.1.34",
+  "version": "2.1.34-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing i18n provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,15 +24,15 @@
     "node": ">=12.14.0"
   },
   "dependencies": {
-    "@shopify/react-hooks": "^2.1.19",
-    "@shopify/react-html": "^11.1.23",
-    "@shopify/react-i18n": "^6.4.0"
+    "@shopify/react-hooks": "^2.1.19-react-18-react-testing-beta.0",
+    "@shopify/react-html": "^11.1.23-react-18-react-testing-beta.0",
+    "@shopify/react-i18n": "^6.4.0-react-18-react-testing-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^4.1.12"
+    "@shopify/react-effect": "^4.1.12-react-18-react-testing-beta.0"
   },
   "files": [
     "build/",
