--- a/packages/react-idle/package.json
+++ b/packages/react-idle/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-idle",
-  "version": "2.1.14",
+  "version": "2.1.14-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "Utilities for working with idle callbacks in React",
   "main": "index.js",
