--- a/packages/react-performance/package.json
+++ b/packages/react-performance/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-performance",
-  "version": "2.1.14",
+  "version": "2.1.14-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "Primitives to measure your React application's performance using `@shopify/performance`",
   "main": "index.js",
