--- a/packages/react-i18n-universal-provider/package.json
+++ b/packages/react-i18n-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-i18n-universal-provider",
-  "version": "3.0.3",
+  "version": "3.0.4-react-18-react-testing-beta.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing i18n provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,15 +24,15 @@
     "node": "^14.17.0 || >=16.0.0"
   },
   "dependencies": {
-    "@shopify/react-hooks": "^3.0.0",
-    "@shopify/react-html": "^12.0.0",
-    "@shopify/react-i18n": "^7.1.2"
+    "@shopify/react-hooks": "^3.0.1-react-18-react-testing-beta.0",
+    "@shopify/react-html": "^12.0.1-react-18-react-testing-beta.0",
+    "@shopify/react-i18n": "^7.1.3-react-18-react-testing-beta.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^5.0.0"
+    "@shopify/react-effect": "^5.0.1-react-18-react-testing-beta.0"
   },
   "files": [
     "build/",
