--- a/packages/browser/package.json
+++ b/packages/browser/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/browser",
-  "version": "3.0.0",
+  "version": "3.0.1-react-18-react-testing-beta.10.0",
   "license": "MIT",
   "description": "Utilities for extracting browser information from user-agents",
   "main": "index.js",
