--- a/packages/react-compose/package.json
+++ b/packages/react-compose/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-compose",
-  "version": "3.0.0",
+  "version": "3.0.1-react-18-react-testing-beta.10.0",
   "license": "MIT",
   "description": "Cleanly compose multiple component enhancers together with minimal fuss",
   "main": "index.js",
