--- a/packages/react-csrf-universal-provider/package.json
+++ b/packages/react-csrf-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-csrf-universal-provider",
-  "version": "3.0.0",
+  "version": "3.0.1-react-18-react-testing-beta.10.0",
   "license": "MIT",
   "description": "A self-serializing/deserializing CSRF token provider that works for isomorphic applications",
   "main": "index.js",
@@ -24,15 +24,15 @@
     "node": "^14.17.0 || >=16.0.0"
   },
   "dependencies": {
-    "@shopify/react-csrf": "^3.0.0",
-    "@shopify/react-html": "^12.0.0",
-    "@shopify/react-universal-provider": "^3.0.0"
+    "@shopify/react-csrf": "^3.0.1-react-18-react-testing-beta.10.0",
+    "@shopify/react-html": "^12.0.1-react-18-react-testing-beta.10.0",
+    "@shopify/react-universal-provider": "^3.0.1-react-18-react-testing-beta.10.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <19.0.0"
   },
   "devDependencies": {
-    "@shopify/react-effect": "^5.0.0"
+    "@shopify/react-effect": "^5.0.1-react-18-react-testing-beta.10.0"
   },
   "files": [
     "build/",
