--- a/packages/react-form/package.json
+++ b/packages/react-form/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-form",
-  "version": "2.1.0",
+  "version": "2.1.1-react-18-react-testing-beta.10.0",
   "license": "MIT",
   "description": "Manage React forms tersely and safely-typed with no magic using React hooks",
   "main": "index.js",
@@ -36,7 +36,7 @@
   ],
   "dependencies": {
     "@shopify/predicates": "^3.0.0",
-    "@shopify/react-hooks": "^3.0.0",
+    "@shopify/react-hooks": "^3.0.1-react-18-react-testing-beta.10.0",
     "fast-deep-equal": "^3.1.3",
     "get-value": "^3.0.1"
   },
