--- a/packages/react-network/package.json
+++ b/packages/react-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-network",
-  "version": "5.0.0",
+  "version": "5.0.1-react-18-react-testing-beta.10.0",
   "license": "MIT",
   "description": "A collection of components that allow you to set common HTTP headers from within your React application",
   "main": "index.js",
@@ -32,9 +32,9 @@
   },
   "dependencies": {
     "@shopify/network": "^3.0.0",
-    "@shopify/react-effect": "^5.0.0",
-    "@shopify/react-hooks": "^3.0.0",
-    "@shopify/react-universal-provider": "^3.0.0",
+    "@shopify/react-effect": "^5.0.1-react-18-react-testing-beta.10.0",
+    "@shopify/react-hooks": "^3.0.1-react-18-react-testing-beta.10.0",
+    "@shopify/react-universal-provider": "^3.0.1-react-18-react-testing-beta.10.0",
     "@types/accept-language-parser": "1.5.0",
     "@types/cookie": "^0.3.3",
     "@types/koa": "^2.0.0",
