--- a/packages/react-universal-provider/package.json
+++ b/packages/react-universal-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@shopify/react-universal-provider",
-  "version": "3.0.0",
+  "version": "3.0.1-react-18-react-testing-beta.10.0",
   "license": "MIT",
   "description": "Factory function and utilities to create self-serializing/deserializing providers that work for isomorphic applications",
   "main": "index.js",
@@ -24,8 +24,8 @@
     "node": "^14.17.0 || >=16.0.0"
   },
   "dependencies": {
-    "@shopify/react-effect": "^5.0.0",
-    "@shopify/react-html": "^12.0.0"
+    "@shopify/react-effect": "^5.0.1-react-18-react-testing-beta.10.0",
+    "@shopify/react-html": "^12.0.1-react-18-react-testing-beta.10.0"
   },
   "peerDependencies": {
     "react": ">=16.8.0 <19.0.0"
